# pyia-server

./: .dockerIgnore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
app/aux_scripts/: insert_produtos_boticario_natura.py
app/config/: __init__.py
app/controllers/: crm_controller.py  file_controller.py
app/db/: __init__.py  database.py  models.py  seed_data.py
app/gemini/: alertas_reabastecimento.txt  criacao_produtos.txt  gen.py  previsao_demanda.txt  prompt.txt  proxima_acao.txt  relatorio_financeiro.txt
app/manager/: path_manager.py
app/modules/: __init__.py  boticario.py
app/routers/: crm.py  files.py
app/utils/: json_transform.py  pdf_extraction.py  pdf_transform.py  test.py
test/: exc.py  prod.py  test.py
