[tool.poetry]
name = "pypdf"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
fastapi = {extras = ["standard"], version = "^0.115.11"}
uvicorn = "^0.34.0"
pymupdf = "^1.25.4"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.taskipy.tasks]
lint = 'ruff check'
format = 'ruff format'

run = 'fastapi dev main.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
